--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,7 +27,7 @@ comments: true
         <div id="disqus_thread"></div>
         <script type="text/javascript">
             /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-            var disqus_shortname = 'tjjtdsh'; // required: replace example with your forum shortname
+            var disqus_shortname = 'tjjtdshgithub'; // required: replace example with your forum shortname
             /*var disqus_developer = 1; // This turns developer mode on
                                       // Make sure you remove this before you push this
                                       // to your live site.
