--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,8 @@ comments: true
   </header>
 
   <p /><br /><p />{{ content }}
-   
+
+<!--   
 <div class="hero-unit">
   <nav id="related">
     <h3>Related Posts</h3>
@@ -22,12 +23,13 @@ comments: true
     </ul>
   </nav>
 </div>
+-->
 
 {% if page.comments %} 
         <div id="disqus_thread"></div>
         <script type="text/javascript">
             /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-            var disqus_shortname = 'tjjtdshgithub'; // required: replace example with your forum shortname
+            var disqus_shortname = 'tjjtdsh'; // required: replace example with your forum shortname
             /*var disqus_developer = 1; // This turns developer mode on
                                       // Make sure you remove this before you push this
                                       // to your live site.
