--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,6 +11,42 @@ comments: true
   </header>
 
   <p /><br /><p />{{ content }}
+  <p /><br /><p />
+<script type="text/javascript" charset="utf-8">
+(function(){
+  var _w = 106 , _h = 24;
+  var param = {
+    url:location.href,
+    type:'5',
+    count:'n',
+    title:'分享好文：'+document.title,
+	ralateUid:'2004193017',
+	language:'zh_cn',
+    rnd:new Date().valueOf()
+  }
+  var temp = [];
+  for( var p in param ){
+    temp.push(p + '=' + encodeURIComponent( param[p] || '' ) )
+  }
+  document.write('<iframe allowTransparency="true" frameborder="0" scrolling="no" src="http://hits.sinajs.cn/A1/weiboshare.html?' + temp.join('&') + '" width="'+ _w+'" height="'+_h+'"></iframe>')
+})()
+</script>
+
+<script type="text/javascript" src="http://widget.renren.com/js/rrshare.js"></script>
+<a name="xn_share" onclick="shareClick()" type="button_large" href="javascript:;"></a>
+<script type="text/javascript">
+	function shareClick() {
+		var rrShareParam = {
+			resourceUrl : location.href,
+			srcUrl : location.href,
+			pic : '',
+			title : '分享好文：'+document.title,
+			description : ''
+		};
+		rrShareOnclick(rrShareParam);
+	}
+</script>
+
 
 <!--   
 <div class="hero-unit">
